--- a/style.css
+++ b/style.css
@@ -18,22 +18,33 @@ h1{
     margin: auto;
     background-color: #d2a6e3;
     border: solid #fcfcfc;
-    padding: 4rem 2rem;
+    padding: 2rem 2rem 3rem 2rem;
     border-radius: 0.5rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+   
 
 }
 
 .input{
     padding: 1rem 0rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+
+label{
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
 }
 
 input{
-    width: 95%;
+    width: 97%;
     border-radius: 0.5rem;
     border: none;
-    padding: 00.5rem;
+    padding: 0.5rem;
 }
 
 .cash-amount input{
@@ -46,14 +57,6 @@ input{
 }
 
 
-#text-output{
-    border: solid #fcfcfc 1px;
-    padding: 0.5rem;
-    background-color: #d2a6e3;
-    border-radius: 0.5rem;
-    min-height: 150px;
-    width: 95%;
-}
 
 button{
     background-color: #fcfcfc;
@@ -63,16 +66,19 @@ button{
     color: #d2a6e3;
     font-size: medium;
     width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .table{
     border: solid #fcfcfc 2px;
     width: 100%;
-    padding: 1rem;
+    padding: 0.5rem 0.5rem;
 }
 
 .table th,td{
     border: solid #fcfcfc 2px;
+    padding: 1rem;
 }
 
 .footer{
@@ -82,4 +88,5 @@ button{
     padding: 1rem;
     font-size: large;
     font-weight: 100;
+    margin-top: 10%;
 }
